# ttbot_ws

./: .gitignore  README.md
scripts/: fake_gps.py  test_connection.py
src/FAST_LIO/config/: velodyne_sim.yaml
src/FAST_LIO/launch/: fast_lio_all.launch.py  fast_lio_sim.launch.py  mapping.launch.py
src/FAST_LIO/src/: laserMapping.cpp
src/adis16488_driver/launch/: imu_system.launch.py
src/adis16488_driver/src/: adis16488_node.cpp
src/qgc_bridge/: package.xml  setup.cfg  setup.py
src/qgc_bridge/qgc_bridge/: bridge_node.py
src/qgc_bridge_cpp/: CMakeLists.txt  package.xml
src/qgc_bridge_cpp/src/: bridge_node.cpp  test.cpp
src/ttbot_bringup/: CMakeLists.txt  package.xml
src/ttbot_bringup/launch/: real.launch.py  sim.launch.py  ttbot_full_system.launch.py  ttbot_full_system_real.launch.py
src/ttbot_controller/: CMakeLists.txt  package.xml
src/ttbot_controller/config/: joy_teleop.yaml  mux_config.yaml  ttbot_controllers.yaml
src/ttbot_controller/include/ttbot_controller/: ackermann_controller.hpp  mpc_controller.hpp  stanley_controller.hpp
src/ttbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py  mpc.launch.py  path_publisher.launch.py  stanley.launch.py
src/ttbot_controller/path/: path_8_shape.csv  path_circle.csv  path_figure8.csv  path_right.csv  path_s.csv  path_s_shape.csv  path_sin.csv  path_sin_bigT.csv  path_straight.csv  path_u.csv  path_u_big.csv  path_u_to_S.csv  plot_path.py
src/ttbot_controller/src/: ackermann_controller.cpp  gps_path_publisher.cpp  mpc_controller.cpp  path_publisher.cpp  stamped_twist_mux.cpp  stanley_controller.cpp
src/ttbot_description/: CMakeLists.txt  package.xml
src/ttbot_description/launch/: display.launch.py  gazebo.launch.py
src/ttbot_description/rviz/: display.rviz
src/ttbot_description/urdf/: ttbot.urdf.xacro  ttbot_gazebo.xacro  ttbot_ros2_control.xacro
src/ttbot_description/worlds/: gps_world.sdf
src/ttbot_gui/: CMakeLists.txt  package.xml
src/ttbot_gui/include/ttbot_gui/: main_window.hpp  ros_worker.hpp
src/ttbot_gui/src/: main.cpp  main_window.cpp  mainwindow.ui  ros_worker.cpp
src/ttbot_localization/: CMakeLists.txt  package.xml
src/ttbot_localization/config/: ekf.yaml  ekf_global.yaml
src/ttbot_localization/include/ttbot_localization/: kalman_filter.hpp
src/ttbot_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/ttbot_localization/src/: kalman_filter.cpp
src/ttbot_mapping/: CMakeLists.txt  package.xml
src/ttbot_mapping/config/: mapper_params.yaml
src/ttbot_mapping/launch/: mapping_sim.launch.py
src/ublox_driver/: CMakeLists.txt  package.xml
src/ublox_driver/launch/: gps.launch.py
