cmake_minimum_required(VERSION 3.8)
project(ttbot_controller)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)

# include thư mục header của chính package
include_directories(include)

# --- Node Ackermann controller ---
add_executable(ackermann_controller
  src/ackermann_controller.cpp
)

ament_target_dependencies(ackermann_controller
  rclcpp
  geometry_msgs
  std_msgs
  sensor_msgs
  tf2
  nav_msgs
  tf2_ros
)

install(
  TARGETS ackermann_controller
  DESTINATION lib/${PROJECT_NAME}
)

# install config + launch 
install(
  DIRECTORY config launch
  DESTINATION share/${PROJECT_NAME}/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
